--- a/index.html
+++ b/index.html
@@ -4,31 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Simple Airbnb Clone</title>
+    <title>Real Estate Agent</title>
 </head>
 <body>
     <header>
-        <nav>
-            <a href="#" class="logo">Airbnb Clone</a>
-            <ul>
-                <li><a href="#">Become a host</a></li>
-                <li><a href="#">Help</a></li>
-                <li><a href="#">Sign up</a></li>
-                <li><a href="#">Log in</a></li>
-            </ul>
-        </nav>
+        <h1>John Doe - Real Estate Agent</h1>
     </header>
-
     <main>
-        <section class="hero">
-            <h1>Book unique homes and experiences.</h1>
-            <form class="search-form">
-                <input type="text" placeholder="Where are you going?" required>
-                <input type="date" placeholder="Check-in" required>
-                <input type="date" placeholder="Check-out" required>
-                <input type="submit" value="Search">
-            </form>
+        <section id="about-me">
+            <img src="your-image.jpg" alt="Your photo" class="profile-photo">
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero.</p>
+        </section>
+        <section id="home-buying">
+            <h2>Steps to Buy a House</h2>
+            <ol>
+                <li>Step 1: Determine Your Budget</li>
+                <li>Step 2: Get Pre-Approved for a Mortgage</li>
+                <li>Step 3: Find a Real Estate Agent</li>
+                <li>Step 4: Search for Your Ideal Home</li>
+                <li>Step 5: Make an Offer</li>
+                <li>Step 6: Complete Home Inspections</li>
+                <li>Step 7: Close on Your New Home</li>
+            </ol>
+        </section>
+        <section id="testimonials">
+            <h2>Client Testimonials</h2>
+            <div class="testimonial">
+                <p>"John Doe was an amazing agent! He helped us find our dream home."</p>
+                <p class="client-name">- Jane Smith</p>
+            </div>
+            <div class="testimonial">
+                <p>"John was knowledgeable and professional. We highly recommend his services!"</p>
+                <p class="client-name">- Mike Johnson</p>
+            </div>
         </section>
     </main>
+    <footer>
+        <p>Contact me: <a href="mailto:john.doe@example.com">john.doe@example.com</a></p>
+    </footer>
 </body>
 </html>
